--- a/AACC2025_estimarvaloresafectivos.ipynb
+++ b/AACC2025_estimarvaloresafectivos.ipynb
@@ -28,8 +28,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Preparación de estimador"
+      ],
+      "metadata": {
+        "id": "Jv8_Bl8HXqLg"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "4CIEqnClqL2p",
         "colab": {
@@ -61,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "DvjfYFBF8sR7"
       },
@@ -96,7 +105,7 @@
         "id": "nMzkuVJJMWFw",
         "outputId": "1f3ebc96-ddbd-4fd4-cd21-54fbaade834c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +130,7 @@
       "metadata": {
         "id": "2MrbMQRcNN4B"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +145,7 @@
         "id": "Sn_5Gt6-NfOA",
         "outputId": "7be045fc-8688-41e2-dbd8-337cda538ec7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,12 +159,37 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Para estimar:\n",
+        "\n",
+        "Cambie la palabra dentro de:\n",
+        "\n",
+        "estimar(\"palabra\")\n",
+        "\n",
+        "Y ejecute la celda"
+      ],
+      "metadata": {
+        "id": "ZFogorMZXxAo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estimar(\"ganar\")"
+      ],
+      "metadata": {
+        "id": "zt-BERLWXycX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1aQmqtYd41KvI1m6+Zsmh",
       "include_colab_link": true
     },
     "kernelspec": {
