--- a/AACC2025_estimarvaloresafectivos.ipynb
+++ b/AACC2025_estimarvaloresafectivos.ipynb
@@ -17,11 +17,7 @@
         "\n",
         "Se recomienda ejecutar en Google Colab.\n",
         "\n",
-        "Luego, para obtener los valores estimativos de una palabra, utilizar la última celda.\n",
-        "\n",
-        "predecir(\"XXXX\")\n",
-        "\n",
-        "donde \"XXXX\" es la palabra a estimar"
+        "Luego, para obtener los valores estimativos de una palabra, utilizar el cuadro encontrado al final de este notebook."
       ],
       "metadata": {
         "id": "ZeNCVV8MPGoR"
@@ -30,21 +26,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Preparación de estimador"
+        "# Preparación"
       ],
       "metadata": {
-        "id": "Jv8_Bl8HXqLg"
+        "id": "NqYF_A5Rbplf"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "4CIEqnClqL2p",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13b04e1e-7abf-44a8-ccc4-0a80cfc54a6f"
+        "outputId": "51e4c064-f1e6-40e8-cbdb-1b4980bceacc"
       },
       "outputs": [
         {
@@ -70,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "DvjfYFBF8sR7"
       },
@@ -103,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nMzkuVJJMWFw",
-        "outputId": "1f3ebc96-ddbd-4fd4-cd21-54fbaade834c"
+        "outputId": "dbed953f-c5be-4779-b539-5e193c49c6ab"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +126,31 @@
       "metadata": {
         "id": "2MrbMQRcNN4B"
       },
-      "execution_count": null,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display\n",
+        "\n",
+        "text_input = widgets.Text(\n",
+        "    value='',\n",
+        "    placeholder='escribir palabra a estimar',\n",
+        "    description='Palabra:',\n",
+        "    disabled=False\n",
+        ")\n",
+        "\n",
+        "def handle_submit(sender):\n",
+        "    estimar(text_input.value)\n",
+        "\n",
+        "text_input.on_submit(handle_submit)\n"
+      ],
+      "metadata": {
+        "id": "bFc0PLjlboMg"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -143,16 +163,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sn_5Gt6-NfOA",
-        "outputId": "7be045fc-8688-41e2-dbd8-337cda538ec7"
+        "outputId": "2d59ea72-d3e6-4b8f-ef81-92198723d420"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 199ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 72ms/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 223ms/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 62ms/step\n",
             "Palabra: ganar\n",
             "Valencia: 7.535353660583496\n",
             "Activacion: 7.396597385406494\n"
@@ -163,33 +183,64 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Para estimar:\n",
-        "\n",
-        "Cambie la palabra dentro de:\n",
-        "\n",
-        "estimar(\"palabra\")\n",
-        "\n",
-        "Y ejecute la celda"
+        "# Estimar valores afectivos"
       ],
       "metadata": {
-        "id": "ZFogorMZXxAo"
+        "id": "AeE4_VwkbyEI"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "estimar(\"ganar\")"
+        "display(text_input)"
       ],
       "metadata": {
-        "id": "zt-BERLWXycX"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136,
+          "referenced_widgets": [
+            "8234ad5f882142769f9267248025b0c0",
+            "da9540b348e74170b985c73c5c5a5f7c",
+            "0b42cb53c2fd4e568993503ec435695f"
+          ]
+        },
+        "id": "VfxwXSahavCg",
+        "outputId": "725ebd32-82d5-43db-8d64-b9d72dac9c77"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Text(value='', description='Palabra:', placeholder='escribir palabra a estimar')"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "8234ad5f882142769f9267248025b0c0"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 43ms/step\n",
+            "Palabra: ganar\n",
+            "Valencia: 7.535353660583496\n",
+            "Activacion: 7.396597385406494\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyMdbXXzpint4HblxyGeA2xf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,6 +249,100 @@
     },
     "language_info": {
       "name": "python"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "8234ad5f882142769f9267248025b0c0": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "TextModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "TextModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "TextView",
+            "continuous_update": true,
+            "description": "Palabra:",
+            "description_tooltip": null,
+            "disabled": false,
+            "layout": "IPY_MODEL_da9540b348e74170b985c73c5c5a5f7c",
+            "placeholder": "escribir palabra a estimar",
+            "style": "IPY_MODEL_0b42cb53c2fd4e568993503ec435695f",
+            "value": "ganar"
+          }
+        },
+        "da9540b348e74170b985c73c5c5a5f7c": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "0b42cb53c2fd4e568993503ec435695f": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        }
+      }
     }
   },
   "nbformat": 4,
