--- a/AACC2025_estimarvaloresafectivos.ipynb
+++ b/AACC2025_estimarvaloresafectivos.ipynb
@@ -40,7 +40,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51e4c064-f1e6-40e8-cbdb-1b4980bceacc"
+        "outputId": "5a2175af-f358-4162-bebf-fdd18fff8455"
       },
       "outputs": [
         {
@@ -61,7 +61,9 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
-        "import keras"
+        "import keras\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, clear_output"
       ]
     },
     {
@@ -99,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nMzkuVJJMWFw",
-        "outputId": "dbed953f-c5be-4779-b539-5e193c49c6ab"
+        "outputId": "11bd7970-d316-40f8-b5e1-0953b23b742d"
       },
       "execution_count": 3,
       "outputs": [
@@ -132,53 +134,27 @@
     {
       "cell_type": "code",
       "source": [
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display\n",
-        "\n",
         "text_input = widgets.Text(\n",
         "    value='',\n",
-        "    placeholder='escribir palabra a estimar',\n",
+        "    placeholder='Ingrese una palabra',\n",
         "    description='Palabra:',\n",
         "    disabled=False\n",
         ")\n",
         "\n",
         "def handle_submit(sender):\n",
-        "    estimar(text_input.value)\n",
+        "    with output_area:\n",
+        "        clear_output()\n",
+        "        estimar(text_input.value)\n",
         "\n",
-        "text_input.on_submit(handle_submit)\n"
+        "text_input.on_submit(handle_submit)\n",
+        "\n",
+        "output_area = widgets.Output()\n"
       ],
       "metadata": {
         "id": "bFc0PLjlboMg"
       },
       "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "estimar(\"ganar\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sn_5Gt6-NfOA",
-        "outputId": "2d59ea72-d3e6-4b8f-ef81-92198723d420"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 223ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 62ms/step\n",
-            "Palabra: ganar\n",
-            "Valencia: 7.535353660583496\n",
-            "Activacion: 7.396597385406494\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -192,55 +168,19 @@
     {
       "cell_type": "code",
       "source": [
-        "display(text_input)"
+        "display(text_input, output_area)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136,
-          "referenced_widgets": [
-            "8234ad5f882142769f9267248025b0c0",
-            "da9540b348e74170b985c73c5c5a5f7c",
-            "0b42cb53c2fd4e568993503ec435695f"
-          ]
-        },
-        "id": "VfxwXSahavCg",
-        "outputId": "725ebd32-82d5-43db-8d64-b9d72dac9c77"
+        "id": "VfxwXSahavCg"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Text(value='', description='Palabra:', placeholder='escribir palabra a estimar')"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "8234ad5f882142769f9267248025b0c0"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 43ms/step\n",
-            "Palabra: ganar\n",
-            "Valencia: 7.535353660583496\n",
-            "Activacion: 7.396597385406494\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdbXXzpint4HblxyGeA2xf",
+      "authorship_tag": "ABX9TyOLDaLWNoZeg9XbzzvOJQRR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,100 +189,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "8234ad5f882142769f9267248025b0c0": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "TextModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "TextModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "TextView",
-            "continuous_update": true,
-            "description": "Palabra:",
-            "description_tooltip": null,
-            "disabled": false,
-            "layout": "IPY_MODEL_da9540b348e74170b985c73c5c5a5f7c",
-            "placeholder": "escribir palabra a estimar",
-            "style": "IPY_MODEL_0b42cb53c2fd4e568993503ec435695f",
-            "value": "ganar"
-          }
-        },
-        "da9540b348e74170b985c73c5c5a5f7c": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "0b42cb53c2fd4e568993503ec435695f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "nbformat": 4,
